# mrs_t2

./: .gitattributes  .gitignore  README.md
mapper/: package.xml  setup.py
mapper/mapper/: reactif_motion_no_think_jus_fwd.py
mrs_t2/square_4/: package.xml  setup.cfg  setup.py
mrs_t2/square_formation/: setup.cfg
mrs_t2/square_formation/square_formation/: coordinator.py  move_to_server.py  targets.py
mrs_t2/square_formation_interfaces/: CMakeLists.txt
mrs_t2/square_formation_interfaces/action/: MoveTo.action
square_4/: package.xml  setup.py
square_4/square4/: coordinated_square_v1.py  simple_motion.py  simple_square_v1.py
square_formation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
square_formation/launch/: formation_setup.launch..py  formation_setup.launch.py
square_formation/square_formation/: coordinator.py  move_to_client.py  move_to_server.py  targets.py
square_formation_interfaces/: package.xml
square_formation_interfaces/src/: dummy.cpp
