<?xml version="1.0"?>
<package format="3">
  <name>square_formation_interfaces</name>
  <version>0.0.0</version>
  <description>Action definitions for square_formation package</description>
  <maintainer email="pcandelas98@gmail.com">pablo</maintainer>
  <license>Apache-2.0</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>action_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
